# bilibili-downloader

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/bilibili_downloader/: api_routes.py  app.py  auth.py  bilibili_client.py  downloader.py
src/bilibili_downloader/static/: index.html  main.js
tests/: test_api_routes.py  test_auth.py  test_bilibili_client.py  test_downloader.py
